# unreal_objects_inc

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile.backend  Dockerfile.company  Dockerfile.company.api  Dockerfile.dashboard  Dockerfile.decision-center  Dockerfile.mcp  Dockerfile.rule-engine  Dockerfile.ui  Dockerfile.worker  README.md  SETUP.md  agent_handoff.md  bot_manifest.md  company_manifest.md  entrypoint-backend.sh  entrypoint-company.sh  entrypoint-mcp.sh  entrypoint-rule-engine.sh  pyproject.toml  railway.toml
bot_adapter/: __init__.py  governance.py  models.py  rule_loader.py
changelog/: changelog_2026-03-29.md  changelog_2026-03-31.md  changelog_2026-04-08.md  changelog_2026-04-12.md  changelog_2026-04-14.md
company_api/: __init__.py  app.py  cli.py  models.py  service.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: DashboardApp.tsx  api.ts  index.css  main.tsx  types.ts
dashboard/src/components/: ApprovalQueue.tsx  BotActivity.tsx  CaseCard.tsx  CaseFeed.tsx  ContainerFleet.tsx  DecisionOutcomes.tsx  EconomicsPanel.tsx  KpiStrip.tsx  OrderDetailModal.tsx  (+8 more)
docs/: agent_handoff.md  deployment-railway.md  rules.md
rule_packs/: support_company.json
scripts/: load_rule_pack.py  start_full_stack.sh
stress_runner/: __init__.py  cli.py  models.py  report.py  runner.py
support_company/: __init__.py  cost_policy.py  generator.py  models.py  pricing.py  simulator.py
tests/: test_company_service.py  test_generator.py  test_simulator.py
worker/: unreal_worker.py
(+1 files in other folders)
