[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unreal-objects-inc"
version = "0.1.0"
description = "Simulated waste-management company for autonomous bots using Unreal Objects guardrails"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
uo-stress-company = "stress_runner.cli:main"
uo-company-server = "company_api.cli:main"

[tool.setuptools.packages.find]
include = ["support_company*", "bot_adapter*", "stress_runner*", "company_api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["unreal_objects", "dashboard", "data", "reports", ".venv", "dist", "build"]
